2010-11-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added missing declaration of aclt variable

2010-11-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/conf_yacc.y:
	  - fixed declaration of conftext variable
	* configure.in:
	  - fixed compilation under Solaris
	* README:
	  - added hint to use --disable-static under Solaris 10/OpenSolaris

2010-10-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c, src/do_md.c:
	  - replaced "File" by "Entry"

2010-10-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/aide.c, doc/aide.conf.5.in:
	  - enabled summarize_changes by default

2010-09-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - rewrote summarize_changes feature to work with node->changed_attrs
	  - replaced "files" by "entries"
	  - made e2fsattrs2string static
	  - use S_IFMT to extract the file type code

2010-09-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
	    renamed from src/compare_db.c)
	  - added get_changed_attributes function
	  - use get_changed_attributes instead of compare_dbline
	  - save changed attributes in node->changed_attrs
	* include/compare_db.h, src/compare_db.c:
	  - removed obsolete compare_dbline function

2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/compare_db.h: removed init_rxlst function
	* include/db_config.h: include seltree.h after #define DB_ATTR_TYPE
	* include/seltree.h:
	  - use DB_ATTR_TYPE instead of int for attr
	  - added DB_ATTR_TYPE changed_attrs to seltree struct

2010-09-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - removed unused functions (find_line_match, init_rxlst, eat_files_indir)
	  - compare ignorelist/forced_attrs with DB_ATTR_UNDEF instead of -1
	  - renamed e2fsattrs2char function to e2fsattrs2string